<resources>
    <string name="app_name">ZHTest</string>

    <string name="title_splash">闪屏</string>
    <string name="title_main">主页</string>
    <string name="title_setting">设置</string>
    <string name="title_message">我的消息</string>


    <string name="account">手机号码</string>
    <string name="password">密码</string>
    <string name="btn_login">登\t\t录</string>
    <string name="btn_register">注\t\t册</string>
    <string name="verification_code">输入验证码进行验证</string>


    <!--XRecyclerView start-->
    <string name="listview_header_hint_normal">pull to refresh</string>
    <string name="listview_header_hint_release">release to start refresh</string>
    <string name="listview_loading">加载中...</string>
    <string name="nomore_loading">加载完成</string>
    <string name="refreshing">refreshing...</string>
    <string name="refresh_done">refresh done</string>
    <string name="listview_header_last_time">last update：</string>
    <!--XRecyclerView end-->

</resources>
