<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/login_bg_dark"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="50dp"
                android:src="@mipmap/loginicon" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/login_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableLeft="@mipmap/ic_username"
                    android:drawablePadding="15dp"
                    android:gravity="left"
                    android:hint="@string/account"
                    android:inputType="number"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:padding="15dp"
                    android:textColorHint="@color/text_hint"
                    android:textSize="16.0sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/login_bg_dark" />

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableLeft="@mipmap/ic_verificationcode"
                    android:drawablePadding="15dp"
                    android:gravity="left"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:padding="15dp"
                    android:textColorHint="@color/text_hint"
                    android:textSize="16.0sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/login_bg_dark" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/verification_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:drawableLeft="@mipmap/ic_verificationcode"
                        android:drawablePadding="15dp"
                        android:gravity="left"
                        android:hint="@string/verification_code"
                        android:maxLength="16"
                        android:maxLines="1"
                        android:padding="15dp"
                        android:textColorHint="@color/text_hint"
                        android:textSize="16.0sp"
                        android:visibility="visible" />

                    <ImageView
                        android:id="@+id/iv_showCode"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_bg_login"
                android:gravity="center"
                android:text="@string/btn_login"
                android:textColor="@color/white"
                android:textSize="18.0sp" />

            <Button
                android:id="@+id/new_regist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/button_bg_register"
                android:gravity="center"
                android:text="@string/btn_register"
                android:textColor="@color/main_color"
                android:textSize="18.0sp" />

            <TextView
                android:id="@+id/forget_pass_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="忘记密码?"
                android:textColor="@color/main_color"
                android:textSize="@dimen/text_14" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>